[package]
name = "rusty-league"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
directories = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
enigo = "0.6.1"
image = "0.25.9"
keyring = "3.6.3"
notify-rust = "4.12.0"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.21.3"
uiautomation = "0.24.3"

[profile.release]
opt-level = "z"
lto = true        
codegen-units = 1 
strip = true       
panic = "abort"
